partial dashboard design implementation

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,15 @@ html {
   font-family: Inter, 'Segoe UI', 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
 }
 
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 svg {
   flex-shrink: 0;
 }
@@ -29,14 +38,11 @@ textarea,
 select,
 button,
 button:focus,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
 a,
-span,
 a:focus {
   outline: none;
+}
+
+span {
+  display: inline-block;
 }
